# qbix

./: Cargo.toml  LICENSE  PLAN.md  README.md  _config.yml  build.rs  renovate.json
.github/workflows/: ci.yml  release.yml
docs/: bucket-index-builder.md  qbi-format.md
include/: qbix.h
src/: api.rs  biosyntax.rs  c_api.rs  cli.rs  commands.rs  error.rs  hts.rs  hts_shim.c  index.rs  lib.rs  main.rs
tests/: api.rs  c_api.rs  c_smoke.c  e2e.rs
tests/common/: mod.rs
